<resources>
    <string name="app_name">Limfy</string>
    <string name="limfy_logo">Limfy logo</string>

    <string name="info_registered">Konto założone, możesz się teraz zalogować!</string>

    <string name="error_connection">Wystąpił błąd z połączeniem</string>
    <string name="error_conflict">Nazwa użytkownika jest już zajęta</string>
    <string name="error_validation">Niepoprawne pole</string>
    <string name="error_internal">Wystąpił błąd wewnętrzny</string>
    <string name="error_credentials_invalid">Login lub hasło niepoprawne</string>
    <string name="error_fill">Uzupełnij wszystkie pola!</string>
    <string name="error_not_supported">Twoje urządzenie nie wspiera Bluetooth Low Energy</string>
    <string name="error_agreement">Zgoda na korzystanie z lokalizacji jest wymagana</string>
    <string name="error_device_not_found">Nie znaleziono urządzenia, spróbuj ponownie</string>
    <string name="error_device_disconnected">Połączenie z urządzeniem zostało utracone</string>

    <string name="login_field_login">Nazwa użytkownika</string>
    <string name="login_field_password">Hasło</string>
    <string name="login_button_login">Zaloguj się</string>
    <string name="login_button_register">Załóż konto</string>

    <string name="register_image_back">Powróć</string>
    <string name="register_text_main">Zarejestruj się</string>
    <string name="register_text_sub">Załóż nowe konto i zacznij korzystać z aplikacji!</string>
    <string name="register_error_internal">Błąd wewnętrzny, zrestartuj aplikację</string>
    <string name="register_not_registered">Twoje konto nie zostało założone</string>

    <string name="connect_text_small">Zbliż swoje urządzenie do telefonu i kliknij na ikonę wyżej.</string>
    <string name="connect_text_sub">znajdź swoje urządzenie poprzez Bluetooth!</string>
    <string name="connect_text_main">Połącz się</string>
    <string name="connect_image">Połącz z urządzeniem</string>

    <string name="app_heart_icon">Serce</string>
    <string name="app_connect_icon">Połącz</string>
    <string name="app_disconnect_icon">Rozłącz</string>
    <string name="app_view_disconnected">Rozłączono urządzenie</string>

    <string name="app_details_arrow_down">Spadek</string>
    <string name="app_details_arrow_up">Wzrost</string>
    <string name="app_details_heartbeat_name">Praca serca</string>
    <string name="app_details_activity_name">Aktywność</string>
    <string name="app_details_heartbeat_average">średnia pulsu</string>
    <string name="app_details_no_data_today">brak dzisiejszych danych</string>
    <string name="app_details_no_data_week">brak tygodniowych danych</string>
    <string name="app_details_higher_today">wyższa dzisiaj</string>
    <string name="app_details_lower_today">niższa dzisiaj</string>
    <string name="app_details_higher_week">wyższa w tym tygodniu</string>
    <string name="app_details_lower_week">niższa w tym tygodniu</string>
    <string name="app_details_no_changes">brak zmian</string>
    <string name="app_details_steps_average">kroków dziennie</string>

    <string name="app_today_name">Twój dzień</string>
    <string name="app_today_heartbeat">Praca serca</string>
    <string name="app_today_heartbeat_description">tętno</string>
    <string name="app_today_activity">Aktywność</string>
    <string name="app_today_steps_description">kroków</string>
    <string name="app_today_distance_description">twoja droga</string>
    <string name="app_today_calories_description">spalonych</string>

    <string name="app_today_value_heartbeat">%1$s bpm</string>
    <string name="app_today_value_distance">%1$s m</string>
    <string name="app_today_value_calories">%1$s cal</string>

    <string name="app_history_name">Historia</string>
    <string name="app_history_measurements">Zapisane pomiary</string>
    <string name="app_history_entry_heartbeat_description">bpm</string>
    <string name="app_history_entry_heartbeat_activity">kroków</string>
    <string name="app_history_no_data">Brak danych, twoje pomiary będą pojawiały się tutaj automatycznie.</string>
    <string name="app_history_no_data_image">Brak danych</string>

    <string name="app_settings_name">Ustawienia</string>
    <string name="app_settings_overall">Twoje dane</string>
    <string name="app_settings_height_description">wysokość</string>
    <string name="app_settings_weight_description">waga</string>
    <string name="app_settings_button_change">Aktualizuj dane</string>
    <string name="app_settings_button_change_new">Dodaj dane</string>
    <string name="app_settings_button_logout">Wyloguj</string>
    <string name="app_settings_button_cancel">Anuluj</string>
    <string name="app_settings_age_text">Dodaj datę urodzenia</string>
    <string name="app_settings_number_text">Dodaj numer ratunkowy</string>
    <string name="app_settings_age_error">Niepoprawna data urodzenia!</string>
    <string name="app_settings_age_format">Data urodzenia: %1$d/%2$d/%3$d</string>
    <string name="app_settings_female">Kobieta</string>
    <string name="app_settings_male">Mężczyzna</string>

    <string name="app_analysis_value_best">Bardzo zdrowy</string>
    <string name="app_analysis_value_best_description">jest znakomicie, tak trzymaj</string>
    <string name="app_analysis_value_good">Zdrowy</string>
    <string name="app_analysis_value_good_description">wszystko w porządku, tak trzymaj</string>
    <string name="app_analysis_value_ok">Poprawny</string>
    <string name="app_analysis_value_ok_description">mogłoby być lepiej</string>
    <string name="app_analysis_value_bad">Niezdrowy</string>
    <string name="app_analysis_value_bad_description">postaraj się zmienić swoje nawyki</string>
    <string name="app_analysis_value_worst">Bardzo niezdrowy</string>
    <string name="app_analysis_value_worst_description">koniecznie zmień swoje nawyki</string>
    <string name="app_analysis_no_data_image">Brak danych</string>
    <string name="app_analysis_no_data_text">Przetwarzamy twoje dane, tutaj będą pojawiały się analizy twojego zdrowia.</string>
    <string name="app_analysis_you">Ty</string>
    <string name="app_analysis_you_description">Twój styl życia</string>

    <string name="fall_text_main">Czy wszystko w porządku?</string>
    <string name="fall_text_sub">Urządzenie wykryło upadek,\nw ciągu 30 sekund zostanie wysłane powiadomienie do: %1$s!</string>
    <string name="fall_button_call">Wezwij pomoc</string>
    <string name="fall_button_ok">Wszystko w porządku, anuluj</string>
</resources>
