<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/connect_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ConnectActivity">

    <ImageView
        android:id="@+id/connect_arrow_back"
        android:layout_width="316dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/register_image_back"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346"
        app:srcCompat="@drawable/drawable_arrow" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="310dp"
        android:layout_height="628dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/connect_text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/connect_text_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/connect_text_main"
            android:textColor="@color/colorAccent"
            android:textSize="42sp" />


        <TextView
            android:id="@+id/connect_text_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/connect_text_sub"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/connect_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/connect_image"
            android:src="@drawable/dummy_connect_off" />

        <ProgressBar
            android:id="@+id/connect_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="241dp"
            android:layout_height="73dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:visibility="invisible" />

    </LinearLayout>

    <TextView
        android:id="@+id/connect_text_small"
        android:layout_width="314dp"
        android:layout_height="54dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="20dp"
        android:text="@string/connect_text_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>