<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_today_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/app_today_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/app_today_name"
            android:textColor="@color/colorAccent"
            android:textSize="42sp" />

        <TextView
            android:id="@+id/app_today_heartbeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/app_today_heartbeat"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/app_today_heartbeat_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="84 bpm"
                android:textColor="@color/colorBlack"
                android:textSize="36sp"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/app_today_heartbeat_icon"
                android:layout_width="51dp"
                android:layout_height="32dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="6dp"
                android:layout_weight="1"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/drawable_heart"
                tools:ignore="InefficientWeight"
                android:contentDescription="@string/app_heart_icon" />
        </LinearLayout>

        <TextView
            android:id="@+id/app_today_heartbeat_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/app_today_heartbeat_description"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/app_today_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/app_today_activity"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/app_today_steps_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="1,214"
            android:textColor="@color/colorBlack"
            android:textSize="36sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/app_today_steps_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/app_today_steps_description"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/app_today_distance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="1,457 km"
            android:textColor="@color/colorBlack"
            android:textSize="36sp"
            android:layout_marginTop="18dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/app_today_distance_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/app_today_distance_description"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/app_today_calories_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="60,7"
            android:textColor="@color/colorBlack"
            android:textSize="36sp"
            android:layout_marginTop="24dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/app_today_calories_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/app_today_calories_description"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>