<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/app_settings_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/app_settings_name"
            android:textColor="@color/colorAccent"
            android:textSize="42sp" />

        <TextView
            android:id="@+id/app_settings_overall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/app_settings_overall"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <NumberPicker
                        android:id="@+id/app_settings_height_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="144dp"
                        android:fontFamily="@font/open_sans"
                        android:theme="@style/NumberPickerTheme" />

                    <TextView
                        android:id="@+id/app_settings_height"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/open_sans"
                        android:gravity="center"
                        android:text=" cm"
                        android:textColor="@color/colorPrimary"
                        android:textSize="36sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/app_settings_height_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/app_settings_height_description"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <NumberPicker
                        android:id="@+id/app_settings_weight_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="144dp"
                        android:fontFamily="@font/open_sans"
                        android:theme="@style/NumberPickerTheme" />

                    <TextView
                        android:id="@+id/app_weight_height"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/open_sans"
                        android:gravity="center"
                        android:text=" kg"
                        android:textColor="@color/colorPrimary"
                        android:textSize="36sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/app_settings_weight_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/app_settings_weight_description"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="78dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/app_settings_button_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_round"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/app_settings_button_change"
            android:textColor="#fff" />

        <Button
            android:id="@+id/app_settings_button_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_round_dark"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/app_settings_button_logout"
            android:textColor="#fff" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>